# smed

./: CMakeLists.txt  README.md  run.sh
lib/freetype/builds/unix/: config.status  freetype-config  libtool  unix-cc.mk  unix-def.mk
lib/freetype/objs/: apinames  autofit.lo  bdf.lo  cff.lo  dlg.lo  ftbase.lo  ftbbox.lo  ftbdf.lo  ftbitmap.lo  ftbzip2.lo  ftcache.lo  ftcid.lo  ftdebug.lo  ftfstype.lo  ftgasp.lo  ftglyph.lo  ftgxval.lo  ftgzip.lo  ftinit.lo  ftlzw.lo  ftmm.lo  ftotval.lo  ftpatent.lo  ftpfr.lo  ftstroke.lo  ftsynth.lo  ftsystem.lo  fttype1.lo  ftwinfnt.lo  libfreetype.la  pcf.lo  pfr.lo  psaux.lo  pshinter.lo  psnames.lo  raster.lo  sdf.lo  sfnt.lo  smooth.lo  svg.lo  (+5 more)
lib/freetype/objs/.libs/: libfreetype.lai  libfreetype.so.6.20.2
res/: config.toml
res/shaders/: font.glsl
smed/: buffer_renderer.hpp  editor.cpp  editor.hpp  files.hpp  font.cpp  font.hpp  font_renderer.hpp  gap_buffer.cpp  gap_buffer.hpp  key_lag.cpp  key_lag.hpp  lexer.cpp  lexer.hpp  main.cpp  undo_redo.cpp  undo_redo.hpp
